BMH: more small changes