@@ -17,21 +17,21 @@ public class FileRepositoryTest {
 	@Test public void for2SequentialFiles() throws Exception {
 		File directory = new File("test-resource/twofiles");
 		FileRepository unit = new FileRepository();
-		Assert.assertEquals(new Long(1), unit.latestIn(directory));
-		Assert.assertEquals(new Long(2), unit.nextIncrementIn(directory));
+		Assert.assertEquals(Long.valueOf(1), unit.latestIn(directory));
+		Assert.assertEquals(Long.valueOf(2), unit.nextIncrementIn(directory));
 	}
 	
 	@Test public void for2NonSequentialFiles() throws Exception {
 		File directory = new File("test-resource/twofiles_not_sequential");
 		FileRepository unit = new FileRepository();
-		Assert.assertEquals(new Long(4), unit.latestIn(directory));
-		Assert.assertEquals(new Long(5), unit.nextIncrementIn(directory));
+		Assert.assertEquals(Long.valueOf(4), unit.latestIn(directory));
+		Assert.assertEquals(Long.valueOf(5), unit.nextIncrementIn(directory));
 	}
 
 	@Test public void for2FilesWithDSStoreFile() throws NoRepositoryReferenceExists {
 		File directory = new File("test-resource/twofiles_with_ds_store");
 		FileRepository unit = new FileRepository();
-		Assert.assertEquals(new Long(1), unit.latestIn(directory));
-		Assert.assertEquals(new Long(2), unit.nextIncrementIn(directory));
+		Assert.assertEquals(Long.valueOf(1), unit.latestIn(directory));
+		Assert.assertEquals(Long.valueOf(2), unit.nextIncrementIn(directory));
 	}
 }
